<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/picked_date"
        android:hint="@string/date_edit_text_hint"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btn_date"
        android:layout_alignParentStart="true"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_date_text"
        android:layout_above="@+id/picked_time"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/picked_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/time_edit_text_hint"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/picked_date"
        android:layout_toStartOf="@+id/btn_date"
        android:inputType="time"/>

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_date"
        android:layout_below="@+id/btn_date"
        android:text="@string/btn_time_text" />

</RelativeLayout>