<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="sans-serif-light"
        android:paddingStart="16dp"
        android:paddingTop="60dp"
        android:paddingEnd="16dp"
        android:paddingBottom="30dp"
        android:text="@string/please_enter_your_data"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/button_birth_date"
        style="@style/button_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/birth_date"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_birth_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=""
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_height"
        style="@style/button_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/height"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=""
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_weight"
        style="@style/button_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/weight"
            android:textSize="15sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=""
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:backgroundTint="@color/colorBlue"
        android:text="@string/button_continue"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

</LinearLayout>