<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/contentDescriptionLogo"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorBlue"
            android:textSize="40sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="61dp"
        android:gravity="center"
        android:text="@string/go_to_using"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_button_select" />

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_button_unselect" />

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_button_unselect" />

        <ImageButton
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/ic_button_unselect" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/ic_next" />

    </LinearLayout>

</RelativeLayout>